# advanced-rag

./: .env.example  .gitignore  AGENTS.md  README.md  architecture.mmd  main.py  pyproject.toml  requirements.txt
api/: routes.py
clients/: ollama_client.py
schemas/: api_schemas.py
services/: answer_generator.py  bm25_service.py  config.py  multi_query_retriever.py  query_rewriter.py  rag_service.py  reranker.py  retrieval_service.py  vectorizer.py
services/query_pipeline/: __init__.py  base.py  builder.py  context.py
services/query_pipeline/handlers/: __init__.py
services/query_pipeline/handlers/answer_generation/: __init__.py  handler.py  methods.py
services/query_pipeline/handlers/bm25_retrieval/: __init__.py  handler.py  methods.py
services/query_pipeline/handlers/merge_matches/: __init__.py  handler.py  methods.py
services/query_pipeline/handlers/multi_query_retrieval/: __init__.py  handler.py  methods.py
services/query_pipeline/handlers/query_preparation/: __init__.py  handler.py  methods.py
services/query_pipeline/handlers/rerank_matches/: __init__.py  handler.py  methods.py
