[project]
name = "advanced-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu==1.13.2",
    "fastapi==0.133.1",
    "fastuuid>=0.14.0",
    "pymupdf>=1.24.0",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "numpy==2.4.2",
    "openai==2.24.0",
    "pypdf==6.7.3",
    "pysbd==0.3.4",
    "python-multipart==0.0.22",
    "rank-bm25==0.2.2",
    "tiktoken==0.12.0",
    "torch==2.10.0",
    "uvicorn==0.41.0",
    "sentence-transformers>=5.3.0",
    "transformers>=5.3.0",
]
